# looker

./: README.rst
looker-1.0/: AUTHORS  ChangeLog  HACKME  Makefile.am  Makefile.in  Makefile.mk  README  WHOAMI  config.h.in  configure  configure.ac
looker-1.0/HTML/: Makefile.am  Makefile.in
looker-1.0/HTML/doc/: index.html  objects.inv
looker-1.0/data/: Makefile.am  Makefile.in
looker-1.0/desktop/: Makefile.am  Makefile.in
looker-1.0/doc/: Makefile.am  Makefile.in  looker.html
looker-1.0/man/: Makefile.am  Makefile.in  looker.1
looker-1.0/src/: GtkSmartMenuItem.c  GtkSmartMenuItem.h  Makefile.am  Makefile.in  configuration.c  configuration.h  error_message.c  error_message.h  global_vars.c  global_vars.h  main.c  player_callbacks.c  player_callbacks.h  video_callbacks.c  video_callbacks.h
looker-1.0/src/headers/: defines.h  includes.h
looker-1.0/texi/: Makefile.am  Makefile.in  looker.info  looker.texi
