nobase_dist_pkgdata_DATA  =   ./doc/objects.inv                    \
                              ./doc/_static/searchtools.js         \
                              ./doc/_static/haiku.css              \
                              ./doc/_static/bg-page.png            \
                              ./doc/_static/basic.css              \
                              ./doc/_static/file.png               \
                              ./doc/_static/down.png               \
                              ./doc/_static/doctools.js            \
                              ./doc/_static/up.png                 \
                              ./doc/_static/down-pressed.png       \
                              ./doc/_static/ajax-loader.gif        \
                              ./doc/_static/alert_warning_32.png   \
                              ./doc/_static/looker-icon.png        \
                              ./doc/_static/up-pressed.png         \
                              ./doc/_static/comment-bright.png     \
                              ./doc/_static/comment.png            \
                              ./doc/_static/pygments.css           \
                              ./doc/_static/jquery.js              \
                              ./doc/_static/underscore.js          \
                              ./doc/_static/alert_info_32.png      \
                              ./doc/_static/comment-close.png      \
                              ./doc/_static/websupport.js          \
                              ./doc/_static/minus.png              \
                              ./doc/_static/bullet_orange.png      \
                              ./doc/_static/plus.png               \
                              ./doc/index.html


