nobase_dist_pkgdata_DATA  = ./icons/16x16/edit-clear-history.png          \
                            ./icons/16x16/folder-video.png                \
                            ./icons/16x16/audio-volume-low.png            \
                            ./icons/16x16/audio-volume-high.png           \
                            ./icons/16x16/help-about.png                  \
                            ./icons/16x16/edit-clear.png                  \
                            ./icons/16x16/run-build-configure.png         \
                            ./icons/16x16/ksnapshot.png                   \
                            ./icons/22x22/preferences-desktop-sound.png   \
                            ./icons/22x22/application-default-icon.png    \
                            ./icons/32x32/gnome-session-reboot.png        \
                            ./icons/32x32/media-playback-start.png        \
                            ./icons/32x32/gnome-session-switch.png        \
                            ./icons/32x32/media-skip-backward.png         \
                            ./icons/32x32/media-skip-forward.png          \
                            ./icons/32x32/media-playback-pause.png        \
                            ./looker-icon.png                             \
                            ./license/gpl.txt

